# mio

./: .env.sample  Cargo.toml  README.md  links.rs  mod.rs  prelude.rs
app/: Cargo.toml
app/src/: env.rs  links_controller.rs  links_repo.rs  main.rs
entity/: Cargo.toml
entity/src/: lib.rs  links.rs  prelude.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
