[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "0.12.0", features = [
  "debug-print",
  "runtime-tokio-native-tls",
  "sqlx-mysql",
] }

# time
chrono = { version = "^0.4", features = ["serde"] }

# Serialize and Deserialize Data Structures
serde = { version = "^1", features = ["derive"] }